--- a/src/MainPage.fxml
+++ b/src/MainPage.fxml
@@ -6,24 +6,24 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="650.0" maxWidth="406.0" minHeight="650.0" minWidth="406.0" prefHeight="650.0" prefWidth="406.0" style="-fx-background-image: url('file:images/backg5.jpg');" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainPage">
+<AnchorPane maxHeight="650.0" maxWidth="406.0" minHeight="650.0" minWidth="406.0" prefHeight="650.0" prefWidth="406.0" style="-fx-background-image: url('file:images/backg5.jpg');" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLController">
    <children>
-      <ImageView fitHeight="44.0" fitWidth="39.0" layoutY="1.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="373.2156867980957" AnchorPane.topAnchor="1.0">
+      <ImageView fitHeight="44.0" fitWidth="39.0" layoutY="1.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="373.2156867980957" AnchorPane.topAnchor="10.0">
          <image>
             <Image url="@../images/score.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="38.0" fitWidth="33.0" layoutX="260.0" layoutY="7.0" mouseTransparent="true" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="7.0">
+      <ImageView fitHeight="38.0" fitWidth="33.0" layoutX="247.0" layoutY="17.0" mouseTransparent="true" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="17.0">
          <image>
             <Image url="@../images/coin.png" />
          </image>
       </ImageView>
-      <Text fill="WHITE" layoutX="34.0" layoutY="33.0" mouseTransparent="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Score" AnchorPane.topAnchor="12.0">
+      <Text fx:id="last_score" fill="WHITE" layoutX="34.0" layoutY="33.0" mouseTransparent="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Score" AnchorPane.bottomAnchor="616.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="280.1328125" AnchorPane.topAnchor="22.0">
          <font>
             <Font name="Calibri Bold" size="22.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="299.0" layoutY="24.0" mouseTransparent="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Coins" AnchorPane.topAnchor="12.0">
+      <Text fill="WHITE" layoutX="289.0" layoutY="38.5" mouseTransparent="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Coins" AnchorPane.topAnchor="22.0">
          <font>
             <Font name="Calibri Bold" size="22.0" />
          </font>
