--- a/src/MainPage2.fxml
+++ b/src/MainPage2.fxml
@@ -23,7 +23,7 @@
             <Font name="Calibri Bold" size="22.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="299.0" layoutY="24.0" mouseTransparent="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Coins" AnchorPane.topAnchor="12.0">
+      <Text fx:id="ttlCoins" fill="WHITE" layoutX="299.0" layoutY="24.0" mouseTransparent="true" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Coins" AnchorPane.topAnchor="12.0">
          <font>
             <Font name="Calibri Bold" size="22.0" />
          </font>
